--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,7 @@
 appname = monitor
 httpport = 8080
-runmode = prod
+runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
-HttpServerTimeOut = 1000
+HttpServerTimeOut = 10000
