--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,4 @@
+[default]
 appname = monitor
 httpport = 8080
 runmode = dev
@@ -5,4 +6,9 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 HttpServerTimeOut = 10000
+
+[prod]
+ServerFile = conf/servers_prod.json
+
+[dev]
 ServerFile = conf/servers.json
