--- a/conf/app.conf
+++ b/conf/app.conf
@@ -8,8 +8,13 @@ HttpServerTimeOut = 10000
 
 [prod]
 ServerFile = conf/servers_prod.json
+dingdingURl = dingdingURl
 
 [dev]
 ServerFile = conf/servers.json
-
 dingdingURl = dingdingURl
+
+
+
+
+[default]
