--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,7 +5,9 @@ autorender = false
 copyrequestbody = true
 EnableDocs = true
 HttpServerTimeOut = 10000
-
+sessionon = true
+username=tron
+password=p@ssword
 [prod]
 ServerFile = conf/servers_prod.json
 dingdingURl = dingdingURl
