--- a/static/package.json
+++ b/static/package.json
@@ -38,5 +38,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-uglify": "^1.5.3"
+  },
+  "dependencies": {
+    "axios": "^0.18.0"
   }
 }
