:whale:modify dockerfile:card_file_box:support create default database:recycle:support create default config files

--- a/conf/monitor.toml
+++ b/conf/monitor.toml
@@ -10,8 +10,8 @@ dataFile = "nodes.json"
 
 [influxdb]
 address = "http://localhost:8086"
-username = "tron"
-password = "trondb"
+username = "root"
+password = "root"
 database = "tronmonitor"
 
 [log]
