--- a/conf/monitor.toml
+++ b/conf/monitor.toml
@@ -32,7 +32,5 @@ level = "debug"
 port = 8080
 
 [task]
-# gRPC Interval defalut 40 seconds
-getGRPCDataInterval = 40
-# HTTP Interval defalut 10 seconds
-getHTTPDataInterval = 10
+# Interval defalut 60 seconds
+getDataInterval = 60
